# Data-Analysis-Agent

./: .gitignore  0_rough.ipynb  readme.md
.ipynb_checkpoints/: 0_planning-checkpoint.ipynb  0_rough-checkpoint.ipynb
data/: markdown.md  transactions_export_2026-03-15_upi.csv
mcp_server/: main.py  pyproject.toml
notebooks/: 0_planning.ipynb  0_rough.ipynb
notebooks/.ipynb_checkpoints/: 0_rough-checkpoint.ipynb
webapp/: frontend.py
workflows/: graph_query_executor.py  main.py  markdown.md  pandas_query_executor.py  schema_generator.py  test.py  tools.py
